--- a/app/globals.css
+++ b/app/globals.css
@@ -71,3 +71,14 @@ html {
     color: hsl(var(--foreground));
   }
 }
+
+@layer components {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    width: 100%;
+    max-width: 1400px;
+  }
+}
